[package]
name = "rcimmixcons"
version = "0.0.1"
authors = ["lummax <luogpg@googlemail.com>"]

[features]
valgrind = ["vgrs"]
no_large_object_space = []

[dependencies.vgrs]
git = "https://github.com/lummax/vgrs"
optional = true

[lib]
name = "rcimmixcons"
doctest = false
crate-type = ["lib", "dylib"]
