[package]
name = "rcimmixcons"
version = "0.0.1"
authors = ["lummax <luogpg@googlemail.com>"]

[features]
valgrind = ["vgrs"]
no_large_object_space = []

[dependencies.vgrs]
git = "https://github.com/lummax/vgrs"
optional = true

[dependencies]
bit-set = "0.2.0"
vec_map = "0.3.0"

[lib]
name = "rcimmixcons"
doctest = false
crate-type = ["lib", "dylib"]
